// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] mt-4"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-8 min-h-8 px-2 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label="sm"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-slot="input"
                data-testid="sm"
                id="sm"
                name="sm"
                placeholder="sm"
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] mt-4"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label="md"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-slot="input"
                data-testid="md"
                id="md"
                name="md"
                placeholder="md"
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_12px)] mt-4"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-12 min-h-12 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label="lg"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-medium"
                data-slot="input"
                data-testid="lg"
                id="lg"
                name="lg"
                placeholder="lg"
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Clearable 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-focus="true"
        data-focus-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-value="true"
        data-hover="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-focus="true"
            data-hover="true"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label=" "
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small peer pe-6 input-search-cancel-button-none is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value="I can be cleared"
              />
              <button
                aria-label="clear input"
                class="p-2 -m-2 z-10 absolute end-3 start-auto pointer-events-none appearance-none select-none opacity-0 cursor-pointer active:!opacity-70 rounded-full outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-large hover:!opacity-100 peer-data-[filled=true]:pointer-events-auto peer-data-[filled=true]:opacity-70 peer-data-[filled=true]:block peer-data-[filled=true]:scale-100 scale-90 ease-out duration-150 transition-[opacity,transform] motion-reduce:transition-none motion-reduce:scale-100"
                data-react-aria-pressable="true"
                data-slot="clear-button"
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10.016 10.016 0 0012 2zm3.36 12.3a.754.754 0 010 1.06.748.748 0 01-1.06 0l-2.3-2.3-2.3 2.3a.748.748 0 01-1.06 0 .754.754 0 010-1.06l2.3-2.3-2.3-2.3A.75.75 0 019.7 8.64l2.3 2.3 2.3-2.3a.75.75 0 011.06 1.06l-2.3 2.3z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > CustomStyles 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-value="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 h-10 min-h-10 !duration-150 motion-reduce:transition-none rounded-2xl px-4 transition-colors duration-500 bg-gradient-to-r from-fuchsia-100 via-rose-100 to-amber-100 dark:from-fuchsia-900 dark:via-rose-900 dark:to-amber-900 data-[hover=true]:bg-gradient-to-r data-[hover=true]:from-emerald-50 data-[hover=true]:via-teal-50 data-[hover=true]:to-lime-50 dark:data-[hover=true]:from-emerald-900 dark:data-[hover=true]:via-teal-900 dark:data-[hover=true]:to-lime-900 border-2 border-fuchsia-400 data-[hover=true]:border-emerald-400 group-data-[focus=true]:border-amber-400 text-fuchsia-700 group-hover:text-emerald-500 dark:text-fuchsia-300 is-filled"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label="Search with party vibes..."
                class="w-full font-normal bg-transparent !outline-solid focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small peer pe-6 input-search-cancel-button-none placeholder:text-fuchsia-400/70 dark:placeholder:text-fuchsia-500/60 is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="partysearch"
                id="partysearch"
                name="partySearch"
                placeholder="Search with party vibes..."
                tabindex="0"
                title=""
                type="text"
                value="Something fun!"
              />
              <button
                aria-label="clear input"
                class="p-2 -m-2 z-10 absolute end-3 start-auto pointer-events-none appearance-none select-none opacity-0 cursor-pointer active:!opacity-70 rounded-full outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-large hover:!opacity-100 peer-data-[filled=true]:pointer-events-auto peer-data-[filled=true]:opacity-70 peer-data-[filled=true]:block peer-data-[filled=true]:scale-100 scale-90 ease-out motion-reduce:transition-none motion-reduce:scale-100 text-fuchsia-500 transition-colors duration-500 hover:text-emerald-500"
                data-react-aria-pressable="true"
                data-slot="clear-button"
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 2a10 10 0 1010 10A10.016 10.016 0 0012 2zm3.36 12.3a.754.754 0 010 1.06.748.748 0 01-1.06 0l-2.3-2.3-2.3 2.3a.748.748 0 01-1.06 0 .754.754 0 010-1.06l2.3-2.3-2.3-2.3A.75.75 0 019.7 8.64l2.3 2.3 2.3-2.3a.75.75 0 011.06 1.06l-2.3 2.3z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label=" "
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Disabled 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full opacity-disabled pointer-events-none relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
        data-disabled="true"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small pointer-events-none !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 pointer-events-none will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="inputfield"
              id="react-aria-react-useId-mock"
            >
              Input Field
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-slot="input"
                data-testid="inputfield"
                disabled=""
                id="inputfield"
                name="inputField"
                placeholder=" "
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Invalid 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-hover="true"
        data-invalid="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-hover="true"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="inputfield"
              id="react-aria-react-useId-mock"
            >
              InvalidField
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-invalid="true"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value="invälid"
              />
            </div>
          </div>
          <div
            class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
            data-slot="helper-wrapper"
          >
            <div
              class="text-tiny text-danger"
              data-slot="error-message"
              id="react-aria-react-useId-mock"
            >
              <ul
                aria-label="Validation errors of field inputfield"
                data-testid="inputfield_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    Must only contain alphanumeric characters and spaces.
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Number 1`] = `
<body>
  <div
    data-live-announcer="true"
    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
  >
    <div
      aria-live="assertive"
      aria-relevant="additions"
      role="log"
    >
      <div>
        2
      </div>
    </div>
    <div
      aria-live="polite"
      aria-relevant="additions"
      role="log"
    />
  </div>
  <div>
    <div
      class="flex w-full flex-row justify-between gap-6"
    >
      <form
        class="grow min-w-60"
        data-form-is-valid="true"
        data-testid=""
      >
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
          data-filled="true"
          data-filled-within="true"
          data-has-elements="true"
          data-has-helper="true"
          data-has-label="true"
          data-has-value="true"
          data-hover="true"
          data-required="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-sm px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
              data-hover="true"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <label
                class="absolute pointer-events-none origin-top-left flex-shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                data-slot="label"
                for="numberfield"
                id="react-aria-react-useId-mock"
              >
                Number Field
              </label>
              <div
                aria-disabled="false"
                class="inline-flex w-full items-center h-full box-border"
                data-slot="inner-wrapper"
                role="group"
              >
                <input
                  aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                  aria-labelledby="react-aria-react-useId-mock"
                  aria-roledescription="Number field"
                  autocomplete="off"
                  autocorrect="off"
                  class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 autofill:bg-transparent bg-clip-text text-small is-filled"
                  data-filled="true"
                  data-slot="input"
                  data-testid="numberfield"
                  id="numberfield"
                  inputmode="numeric"
                  placeholder=" "
                  required=""
                  spellcheck="false"
                  tabindex="0"
                  title=""
                  type="text"
                  value="2"
                />
                <input
                  data-slot="hidden-input"
                  name="numberField"
                  type="hidden"
                  value="2"
                />
                <div
                  class="flex flex-col ps-1 h-full justify-center"
                  data-slot="stepper-wrapper"
                >
                  <button
                    aria-controls="numberfield"
                    aria-label="Increase"
                    aria-labelledby="react-aria-react-useId-mock react-aria-react-useId-mock"
                    class="z-0 group relative box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-small gap-2 rounded-medium px-0 !gap-0 motion-reduce:transition-none text-default-foreground data-[hover=true]:opacity-hover bg-transparent flex justify-center items-center before:absolute before:w-8 before:h-8 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 overflow-visible transition-opacity data-[hover=true]:opacity-70 data-[pressed=true]:opacity-disabled min-w-3 w-3 h-3"
                    data-react-aria-pressable="true"
                    data-slot="increase-button"
                    id="react-aria-react-useId-mock"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="1em"
                      role="presentation"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="m18 15-6-6-6 6"
                      />
                    </svg>
                  </button>
                  <button
                    aria-controls="numberfield"
                    aria-label="Decrease"
                    aria-labelledby="react-aria-react-useId-mock react-aria-react-useId-mock"
                    class="z-0 group relative box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-small gap-2 rounded-medium px-0 !gap-0 motion-reduce:transition-none text-default-foreground data-[hover=true]:opacity-hover bg-transparent flex justify-center items-center before:absolute before:w-8 before:h-8 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 overflow-visible transition-opacity data-[hover=true]:opacity-70 data-[pressed=true]:opacity-disabled min-w-3 w-3 h-3"
                    data-react-aria-pressable="true"
                    data-slot="decrease-button"
                    id="react-aria-react-useId-mock"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="1em"
                      role="presentation"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-4 flex justify-end"
        >
          <button
            aria-label="Submit form"
            class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
            data-react-aria-pressable="true"
            data-testid="form_submit_button"
            tabindex="0"
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
  </div>
</body>
`;

exports[`Story Snapshots > Password 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-hover="true"
        data-invalid="true"
        data-required="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-hover="true"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="passwordfield"
              id="react-aria-react-useId-mock"
            >
              Password Field
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-invalid="true"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger is-filled [&::-ms-reveal]:hidden"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="passwordfield"
                data-type="password"
                id="passwordfield"
                name="passwordField"
                placeholder=" "
                required=""
                tabindex="0"
                title=""
                type="password"
                value="veryS3cure!"
              />
            </div>
          </div>
          <div
            class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
            data-slot="helper-wrapper"
          >
            <div
              class="text-tiny text-danger"
              data-slot="error-message"
              id="react-aria-react-useId-mock"
            >
              <ul
                aria-label="Validation errors of field passwordfield"
                data-testid="passwordfield_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    String must contain at least 20 character(s)
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-required="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="inputfield"
              id="react-aria-react-useId-mock"
            >
              Input Field
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                required=""
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > ValidationAfterClear 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-hover="true"
        data-invalid="true"
        data-required="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus"
            data-hover="true"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="inputfield"
              id="react-aria-react-useId-mock"
            >
              Required Cleared Field
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-invalid="true"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                required=""
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
            data-slot="helper-wrapper"
          >
            <div
              class="text-tiny text-danger"
              data-slot="error-message"
              id="react-aria-react-useId-mock"
            >
              <ul
                aria-label="Validation errors of field inputfield"
                data-testid="inputfield_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    Field is required
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValue 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-value="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label=" "
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value="initial value"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithLabel 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="inputfield"
              id="react-aria-react-useId-mock"
            >
              Some Label
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithSelect 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <span
                data-testid="icon-FaEnvelope"
              >
                FaEnvelope
              </span>
              <input
                aria-label=" "
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                data-has-end-content="true"
                data-has-start-content="true"
                data-slot="input"
                data-testid="inputfield"
                id="inputfield"
                name="inputField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value=""
              />
              <select
                class="border-0 bg-transparent text-default-400 outline-none text-small"
                id="currency"
                name="currency"
              >
                <option>
                  @fuf.cool
                </option>
                <option>
                  @gmail.com
                </option>
                <option>
                  @pixelpost.org
                </option>
              </select>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithTransformComplexObject 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="hero"
              id="react-aria-react-useId-mock"
            >
              Superhero Name (stored as object with emoji & power)
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="hero"
                id="hero"
                name="hero"
                placeholder="Try: spiderman, batman, superman..."
                tabindex="0"
                title=""
                type="text"
                value="Spider-Man"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithValueTransform 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="username"
              id="react-aria-react-useId-mock"
            >
              Username
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="react-aria-react-useId-mock"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                data-filled="true"
                data-filled-within="true"
                data-has-end-content="true"
                data-slot="input"
                data-testid="username"
                id="username"
                name="userName"
                placeholder="Enter username..."
                tabindex="0"
                title=""
                type="text"
                value="john"
              />
              🤡
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
